Add position counting as a function

--- a/project_2/SConstruct
+++ b/project_2/SConstruct
@@ -17,6 +17,7 @@ env.Append(BUILDERS = {'List' : list})
 
 env.Program('main', ['main.c',
                       '../lib/timer.c',
+			'positionCount.c',
                       '../lib/ui.c',
                       '../lib/uart.c',
 			'../lib/pin.c',
